--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <title>Cyberpunk Gaming Gear</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
-  <link href="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/bootstrap/bootstrap-reboot.min.css" rel="stylesheet">
-  <link href="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/bootstrap/bootstrap.css" rel="stylesheet">
-  <link href="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/bootstrap/bootstrap-grid.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -17,42 +13,22 @@
 <body>
 <div class="crf">
   <!-- NAVIGATION -->
-  <nav class="navbar navbar-expand flex-column flex-md-row header-nav--nav">
+  <nav>
     <div class="container">
-      <div class="d-md-flex justify-content-between">
-        <div class="navbar-brand d-flex justify-content-between align-items-center">
-          <a href="#"><img alt="Cyberpunk Gaming Gear" src="./Images/logo/cgg.png"></a> <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggle" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        </div>
-        <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNav">
-          <div class="header-nav--main">
-            <form class="form-inline form-inline d-none d-sm-none d-md-block">
-              <input aria-label="Search" class="form-control" placeholder="What can we help you find?" type="search"> <button class="btn btn-default" type="submit">SEARCH</button>
-            </form>|
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#">Gear</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Reviews</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
-            </ul>
-          </div>
-          <div class="header-nav--utilities d-flex align-items-center justify-content-end flex-row-reverse flex-row flex-md-row">
-            <div class="account d-flex flex-column">
-              John Doe <a href="#">Log Out</a>
-            </div>
-            <div class="image"><img alt="John Doe" src="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/profile-pic.jpg"></div>
-          </div>
-        </div>
-      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <form>
+        <input type="text" placeholder="Search...">
+        <button type="submit">Search</button>
+      </form>
     </div>
   </nav>
 
-  <!-- MOBILE SEARCH -->
-  <section class="header-nav--search d-block d-sm-block d-md-none">
-    <form class="form-inline form-inline">
-      <input aria-label="Search" class="form-control" placeholder="What can we help you find?" type="search">
-    </form>
-  </section>
+
 
 
   <!-- HEADER -->
